# haex-hub

./: .claude-session.json  .gitignore  .prettierrc.toml  README.md  drizzle.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts.old  todos.md  tsconfig.json
.github/workflows/: build.yml  release.yml
scripts/: fix-vite-mapdeps.js
src/: app.config.ts  app.vue
src-tauri/: .env  Cargo.toml  build.rs  tauri.conf.json
src-tauri-db/: build.rs
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: query-a73e92ff12dca9b046a6440b9a68b002662b594f7f569ee71de11e00c23ca625.json
src-tauri/bindings/: Action.ts  DatabaseError.ts  DbAction.ts  DbConstraints.ts  DisplayMode.ts  ExtensionErrorCode.ts  ExtensionInfoResponse.ts  ExtensionManifest.ts  ExtensionPermissions.ts  ExtensionPreview.ts  FsAction.ts  FsConstraints.ts  HttpAction.ts  HttpConstraints.ts  PermissionConstraints.ts  PermissionEntry.ts  PermissionStatus.ts  RateLimit.ts  ResourceType.ts  SerializedExtensionError.ts  ShellAction.ts  ShellConstraints.ts  TriggerSetupResult.ts  VaultInfo.ts  WebAction.ts  WebConstraints.ts
src-tauri/capabilities/: default.json  extensions.json
src-tauri/database/: generate-rust-types.ts  index.ts  tableNames.json  vault.db
src-tauri/database/migrations/: 0000_bumpy_valkyrie.sql  0000_cynical_nicolaos.sql  0000_dashing_night_nurse.sql  0000_glamorous_hulk.sql  0000_secret_ender_wiggin.sql  0000_zippy_scourge.sql  0001_furry_brother_voodoo.sql  0001_green_stark_industries.sql  0001_late_the_renegades.sql  0001_wealthy_thaddeus_ross.sql  0002_amazing_iron_fist.sql  0002_loose_quasimodo.sql  0002_married_bushwacker.sql  0003_daily_polaris.sql  0003_familiar_doctor_faustus.sql  0003_luxuriant_deathstrike.sql  0004_fast_epoch.sql  0004_mature_viper.sql  0004_wooden_lockheed.sql  0005_tidy_yellowjacket.sql  0005_wooden_nuke.sql  0006_complete_martin_li.sql  0006_gigantic_bloodaxe.sql  0007_daffy_tusk.sql  0007_stale_longshot.sql  0008_dizzy_blue_shield.sql  0008_faulty_mercury.sql  0009_boring_arclight.sql  0009_curved_selene.sql  0010_deep_war_machine.sql  0011_illegal_thor_girl.sql  0012_special_gwen_stacy.sql
src-tauri/database/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  _journal.json
src-tauri/database/schemas/: crdt.ts  haex.ts  index.ts  vault.ts
src-tauri/generator/: event_names.rs  mod.rs  table_names.rs
src-tauri/src/: lib.rs  main.rs  mobile.rs  models.rs  models_final.rs  models_new.rs
src-tauri/src/android_storage/: mod.rs
src-tauri/src/binss/: setup-triggers.rs
src-tauri/src/browser/: manager.rs  middleware.rs  mod.rs
src-tauri/src/crdt/: hlc.rs  insert_transformer.rs  log.rs  mod.rs  proxy.rs  query_transformer.rs  transformer.rs  trigger.rs  trigger_alter.rs
src-tauri/src/database/: core.rs  error.rs  generated.rs  init.rs  mod.rs  sql_proxy.rs
src-tauri/src/extension/: core.rs  core_old.rs  crypto.rs  error.rs  mod.rs  permission_manager.rs
src-tauri/src/extension/core/: manager.rs  manifest.rs  mod.rs  protocol.rs  types.rs
src-tauri/src/extension/database/: executor.rs  mod.rs  permissions.rs
src-tauri/src/extension/filesystem/: core.rs  mod.rs  permissions.rs
src-tauri/src/extension/permissions/: check.rs  manager.rs  mod.rs  types.rs  validator.rs
src-tauri/src/extension/web/: mod.rs
src-tauri/src/extension/webview/: database.rs  filesystem.rs  helpers.rs  manager.rs  mod.rs  web.rs
src/assets/css/: main.css  tailwind.css
src/components/haex/: icon.vue
src/components/test/: dialog.vue
src/components/ui/: Drawer.vue  test.vue
src/composables/: extensionContextBroadcast.ts  extensionMessageHandler.ts  helper.ts  useAndroidBackButton.ts  useExtensionError.ts
src/composables/handlers/: context.ts  database.ts  filesystem.ts  http.ts  index.ts  permissions.ts  storage.ts  types.ts  web.ts
src/config/: constants.ts
src/constants/: eventNames.json  events.ts
src/database/: index.ts  tableNames.json
src/database/schemas/: crdt.ts  haex.ts
src/i18n/: i18n.config.ts
src/layouts/: app.vue  default.vue
src/middleware/: database.ts
src/pages/: index.vue  test.vue  vault.vue
src/plugins/: console-interceptor.ts  flyonui.client.ts  init-logger.ts
src/plugins/plugins/: i18n.client.ts
src/stores/browser/: extensions.ts
src/stores/desktop/: de.json  en.json  index.ts  windowManager.ts  workspace.ts
src/stores/extensions/: index.ts  tabs.ts
src/stores/passwords/: groups.ts  history.ts  (+1 more)
src/types/: global.d.ts  haexhub.d.ts
src/utils/: androidStorage.ts  extension.ts  helper.ts  platform.ts  viewport.ts  webview-bridge.js
utils/: helper.ts
(+133 files in other folders)
