[package]
name = "haex-hub"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "haex_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
rusqlite = { version = "0.37.0", features = [
    "load_extension",
    "bundled-sqlcipher-vendored-openssl",
    "functions",
] }
#libsqlite3-sys = { version = "0.31", features = ["bundled-sqlcipher"] }
#sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
hex = "0.4"
serde_json = "1"
base64 = "0.22"
mime_guess = "2.0"
mime = "0.3"
fs_extra = "1.3.0"
sqlparser = { version = "0.57.0", features = ["visitor"] }
uhlc = "0.8"
tauri = { version = "2.6.2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2.3"
tauri-plugin-fs = "2.4.0"
tauri-plugin-opener = "2.4.0"
tauri-plugin-os = "2.3"
tauri-plugin-store = "2.3"
tauri-plugin-http = "2.5"
tauri-plugin-notification = "2.3"
tauri-plugin-persisted-scope = "2.0.0"
tauri-plugin-android-fs = "9.5.0" 
#tauri-plugin-sql = { version = "2", features = ["sqlite"] }


